<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="523dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_marginLeft="50dp"
            android:text="@string/string_Biendenidos"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="378dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/string_Usuario"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="268dp" />

            <EditText
                android:id="@+id/edtxtUsuario"
                android:layout_width="172dp"
                android:layout_height="43dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/string_Usuario"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="292dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginTop="30dp"
                android:text="@string/string_Contraseña"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="120dp" />

            <EditText
                android:id="@+id/edtxtContraseña"
                android:layout_width="158dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="31dp"
                android:layout_marginRight="31dp"
                android:layout_marginBottom="374dp"
                android:ems="10"
                android:hint="********"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/edtxtUsuario"
                app:layout_constraintVertical_bias="1.0" />
        </LinearLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="127dp"
            android:layout_height="66dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/holo_red_dark"
            android:onClick="onClick1"
            android:text="@string/string_Ingresar"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="646dp" />

        <Button
            android:id="@+id/btrnCrear"
            android:layout_width="266dp"
            android:layout_height="72dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/background_light"
            android:onClick="onClick"
            android:text="@string/string_Crea_cuenta"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="60dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>