<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCuenta">

    <LinearLayout
        android:layout_width="358dp"
        android:layout_height="461dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="296dp"
            android:layout_height="62dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="8dp"
            android:text="@string/string_CrearNC"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.192"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/string_Usuario"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="46dp" />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/string_Contraseña"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="270dp" />

        <EditText
            android:id="@+id/edtContraseña"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginLeft="70dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="287dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="131dp"
            android:layout_height="77dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/holo_red_dark"
            android:onClick="onClick2"
            android:text="Button"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="526dp"
            tools:text="@string/string_Crear" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>