<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvContactos"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="490dp"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tlbContacto"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_red_dark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbNombre"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/txtvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_txtv_nombre"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbCorreo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_contact_mail" />

            <TextView
                android:id="@+id/txtvCorreo"
                android:layout_width="wrap_content"
                android:layout_height="86dp"
                android:layout_gravity="center"
                android:text="@string/string_txtv_correo"
                android:textSize="35sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="292dp">

            <ImageButton
                android:id="@+id/imageTelefono"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/txtvTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_txtv_telefono"
                android:textSize="40sp" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>